tests/valid/definite/BoolFun_Valid_1.whiley
void f(bool b):
    print str(b)

void System::main([string] args):
    x = true
    f(x)
    x = false
    f(x)
