tests/invalid/simple/Assign_CompileFail_5.whiley
void f(bool x):
     int z
     z = x
